Fix range-number input alignment and width
The items were aligned to the top as the parent div had been given display: flex
The width was slightly too large so the tooltip button did not fit

--- a/frontend/src/components/option_menu/RangeNumberInput.module.css
+++ b/frontend/src/components/option_menu/RangeNumberInput.module.css
@@ -7,9 +7,10 @@
 
 .inputWrapper {
 	display: flex;
+	align-items: inherit;
 	justify-content: flex-end;
 	width: 100%;
-	max-width: 30rem;
+	max-width: 28rem;
 	min-width: 15rem;
 }
 
